--- a/MvcCv/Views/Default/Index.cshtml
+++ b/MvcCv/Views/Default/Index.cshtml
@@ -38,7 +38,7 @@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Yeteneklerim</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Hobilerim</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Sertifikalarım</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">İletişim</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">İletişim</a></li>
             </ul>
         </div>
     </nav>
@@ -70,7 +70,7 @@
         <hr class="m-0" />
         <!-- Experience-->
         <section class="resume-section" id="experience">
-        @Html.Action("Deneyim");            
+            @Html.Action("Deneyim");
         </section>
         <hr class="m-0" />
         <!-- Education-->
@@ -90,7 +90,12 @@
         <hr class="m-0" />
         <!-- Awards-->
         <section class="resume-section" id="awards">
-           @Html.Action("Sertifikalarım")
+            @Html.Action("Sertifikalarım")
+        </section>
+        <hr class="m-0" />
+        <!-- Contact -->
+        <section class="resume-section" id="contact">
+            @Html.Action("iletisim")
         </section>
     </div>
     <!-- Bootstrap core JS-->
