--- a/MvcCv/Views/Hakkimda/Index.cshtml
+++ b/MvcCv/Views/Hakkimda/Index.cshtml
@@ -11,5 +11,15 @@
         <th>Ad</th>
         <th>Şehir</th>
     </tr>
+    <tr>
+        <td>1</td>
+        <td>Murat</td>
+        <td>Elazığ</td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>Mesut</td>
+        <td>Adana</td>
+    </tr>
 </table>
 
