--- a/MvcCv/Views/Deneyim/DeneyimGetir.cshtml
+++ b/MvcCv/Views/Deneyim/DeneyimGetir.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@model MvcCv.Models.Entity.TblDeneyimlerim
 @{
     ViewBag.Title = "DeneyimGetir";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -8,13 +8,20 @@
 <h4>Yeni Deneyim Ekleme Sayfası</h4>
 <br />
 <form>
-    <input type="text" name="Baslik" class="form-control" placeholder="Basligi Yaziniz" />
+    @Html.Label("Deneyim ID")
+    @Html.TextBoxFor(x => x.ID, new { @class = "form-control" })
     <br />
-    <input type="text" name="AltBaslik" class="form-control" placeholder="Alt Başlık giriniz" />
+    @Html.Label("Başlık")
+    @Html.TextBoxFor(x => x.Baslik, new { @class = "form-control" })
     <br />
-    <input type="text" name="Tarih" class="form-control" placeholder="Çalışma Tarihi" />
+    @Html.Label("Alt Başlık")
+    @Html.TextBoxFor(x => x.AltBaslik, new { @class = "form-control" })
     <br />
-    <textarea placeholder="Açıklamanızı Giriniz" name="Aciklama" class="form-control" rows="5"></textarea>
+    @Html.Label("Tarih")
+    @Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
+    <br />
+    @Html.Label("Açıklama")
+    @Html.TextAreaFor(x => x.Aciklama, new { @class = "form-control" })
     <br />
     <button class="btn btn-info">Kaydet</button>
 </form>
