--- a/MvcCv/Views/Deneyim/DeneyimGetir.cshtml
+++ b/MvcCv/Views/Deneyim/DeneyimGetir.cshtml
@@ -7,7 +7,7 @@
 <br />
 <h4>Yeni Deneyim Ekleme Sayfası</h4>
 <br />
-<form>
+<form method="post">
     @Html.Label("Deneyim ID")
     @Html.TextBoxFor(x => x.ID, new { @class = "form-control" })
     <br />
