--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -6,7 +6,7 @@
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
 @{ string renk = "";}
-
+@{ string labelRenk = "";}
 
 <!DOCTYPE html>
 <html>
@@ -25,6 +25,9 @@
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
+                                <a href="#" class="btn btn-info">Yeni Yetenek Ekle</a>
+                                <br />
+                                <br />
                                 <table class="table table-bordered">
                                     <thead>
                                         <tr>
@@ -32,6 +35,8 @@
                                             <th>Yetenek</th>
                                             <th>Derece</th>
                                             <th style="width: 40px">Oran</th>
+                                            <th>Düzenle</th>   
+                                            <th>Sil</th>
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -40,29 +45,45 @@
                                             if (item.Oran >= 0 && item.Oran <= 50)
                                             {
                                                 renk = "progress-bar bg-danger";
+                                                labelRenk = "badge bg-danger";
                                             }
                                             if (item.Oran >= 51 && item.Oran <= 70)
                                             {
                                                 renk = "progress-bar bg-warning";
+                                                labelRenk = "badge bg-warning";
                                             }
                                             if(item.Oran >= 71 && item.Oran <= 84)
                                             {
                                                 renk = "progress-bar bg-primary";
+                                                labelRenk = "badge bg-primary";
                                             }
                                             if(item.Oran >= 85 && item.Oran <= 100)
                                             {
                                                 renk = "progress-bar bg-success";
+                                                labelRenk = "badge bg-success";
                                             }
-                                            <tr>
-                                                <td>@item.ID</td>
-                                                <td>@item.Yetenek</td>
-                                                <td>
-                                                    <div class="progress progress-xs">
-                                                        <div class="@renk" style="width: @item.Oran%"></div>
-                                                    </div>
-                                                </td>
-                                                <td><span class="badge bg-warning">@item.Oran%</span></td>
-                                            </tr>
+                                        <tr>
+                                            <td>@item.ID</td>
+                                            <td>@item.Yetenek</td>
+                                            <td>
+                                                <div class="progress progress-xs">
+                                                    <div class="@renk" style="width: @item.Oran%"></div>
+                                                </div>
+                                            </td>
+                                            <td><span class="@labelRenk">@item.Oran%</span></td>
+                                            <td>
+                                                <a href="#" class="btn btn-info btn-sm">
+                                                    <i class="fas fa-pencil-alt"></i>
+                                                    Düzenle
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a href="#" class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                    Sil
+                                                </a>
+                                            </td>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
