--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -25,7 +25,7 @@
                             </div>
                             <!-- /.card-header -->
                             <div class="card-body">
-                                <a href="#" class="btn btn-info">Yeni Yetenek Ekle</a>
+                                <a href="/Yetenek/YeniYetenek/" class="btn btn-info">Yeni Yetenek Ekle</a>
                                 <br />
                                 <br />
                                 <table class="table table-bordered">
