--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -78,7 +78,7 @@
                                                 </a>
                                             </td>
                                             <td>
-                                                <a href="#" class="btn btn-danger btn-sm">
+                                                <a href="/Yetenek/YetenekSil/@item.ID" class="btn btn-danger btn-sm">
                                                     <i class="fas fa-trash-alt"></i>
                                                     Sil
                                                 </a>
