--- a/MvcCv/Views/Yetenek/Index.cshtml
+++ b/MvcCv/Views/Yetenek/Index.cshtml
@@ -72,7 +72,7 @@
                                             </td>
                                             <td><span class="@labelRenk">@item.Oran%</span></td>
                                             <td>
-                                                <a href="#" class="btn btn-info btn-sm">
+                                                <a href="/Yetenek/YetenekDuzenle/@item.ID" class="btn btn-info btn-sm">
                                                     <i class="fas fa-pencil-alt"></i>
                                                     Düzenle
                                                 </a>
