--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -62,11 +62,10 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../widgets.html" class="nav-link">
+                            <a href="/Egitim/Index" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Eğitimlerim
-                                    <span class="right badge badge-danger">New</span>
+                                    Eğitimlerim                                    
                                 </p>
                             </a>
                         </li>
