--- a/MvcCv/Views/Sertifika/Index.cshtml
+++ b/MvcCv/Views/Sertifika/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using MvcCv.Models.Entity
+@model List<TblSertifikalarim>
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
@@ -22,25 +23,30 @@
                                     <!-- The timeline -->
                                     <div class="timeline timeline-inverse">
                                         <!-- timeline time label -->
+                                        @foreach (var item in Model)
+                                        {
+
+
                                         <div class="time-label">
                                             <span class="bg-success">
-                                                10 Feb. 2014
+                                                @item.Tarih
                                             </span>
                                         </div>
                                         <!-- /.timeline-label -->
                                         <!-- timeline item -->
                                         <div>
-                                            <i class="fas fa-comment bg-primary"></i>
+                                            @*<i class="fas fa-comment bg-primary"></i>*@
                                             <div class="timeline-item">                                                                                        
                                                 <div class="timeline-body">
-                                                   Burası Açıklama
+                                                   @item.Aciklama
                                                 </div>
-                                                <div class="timeline-footer">
+                                                @*<div class="timeline-footer">
                                                     <a href="#" class="btn btn-primary btn-sm">Düzenle</a>
                                                     <a href="#" class="btn btn-danger btn-sm">Sil</a>
-                                                </div>
+                                                </div>*@
                                             </div>
-                                        </div>                                                                                                           
+                                        </div> 
+                                        }
                                     </div>
                                 </div>
                             </div>                            
