--- a/MvcCv/Views/Sertifika/Index.cshtml
+++ b/MvcCv/Views/Sertifika/Index.cshtml
@@ -3,6 +3,7 @@
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
+    string btnRenk = "";
 }
 
 <!DOCTYPE html>
@@ -16,47 +17,55 @@
                 <div class="col-md-12">
                     <div class="card">
                         <div class="card-header p-2">
-                            
+
                         </div><!-- /.card-header -->
-                        <div class="card-body">                            
-                                <div class="tab-pane" id="timeline">
-                                    <!-- The timeline -->
-                                    <div class="timeline timeline-inverse">
-                                        <!-- timeline time label -->
-                                        @foreach (var item in Model)
+                        <div class="card-body">
+                            <div class="tab-pane" id="timeline">
+                                <!-- The timeline -->
+                                <div class="timeline timeline-inverse">
+                                    <!-- timeline time label -->
+                                    @foreach (var item in Model)
+                                    {
+                                        if (item.ID % 2 == 0)
                                         {
-
-
+                                            btnRenk = "success";
+                                        }
+                                        if (item.ID % 2 == 1)
+                                        {
+                                            btnRenk = "primary";
+                                        }
                                         <div class="time-label">
-                                            <span class="bg-success">
-                                                @item.Tarih
-                                            </span>
+                                            <a href="/Sertifika/SertifikaGetir/@item.ID" class="btn btn-@btnRenk">
+                                                <span>
+                                                    @item.Tarih
+                                                </span>
+                                            </a>
                                         </div>
                                         <!-- /.timeline-label -->
                                         <!-- timeline item -->
                                         <div>
                                             @*<i class="fas fa-comment bg-primary"></i>*@
-                                            <div class="timeline-item">                                                                                        
+                                            <div class="timeline-item">
                                                 <div class="timeline-body">
-                                                   @item.Aciklama
+                                                    @item.Aciklama
                                                 </div>
                                                 @*<div class="timeline-footer">
-                                                    <a href="#" class="btn btn-primary btn-sm">Düzenle</a>
-                                                    <a href="#" class="btn btn-danger btn-sm">Sil</a>
-                                                </div>*@
+                                                        <a href="#" class="btn btn-primary btn-sm">Düzenle</a>
+                                                        <a href="#" class="btn btn-danger btn-sm">Sil</a>
+                                                    </div>*@
                                             </div>
-                                        </div> 
-                                        }
-                                    </div>
+                                        </div>
+                                    }
                                 </div>
-                            </div>                            
-                        </div><!-- /.card-body -->
-                    </div>
-                    <!-- /.nav-tabs-custom -->
+                            </div>
+                        </div>
+                    </div><!-- /.card-body -->
                 </div>
-                <!-- /.col -->
+                <!-- /.nav-tabs-custom -->
             </div>
-            <!-- /.row -->        
+            <!-- /.col -->
+        </div>
+        <!-- /.row -->
     </section>
 </body>
 </html>
