--- a/MvcCv/Views/Sertifika/SertifikaGetir.cshtml
+++ b/MvcCv/Views/Sertifika/SertifikaGetir.cshtml
@@ -18,6 +18,7 @@
     @Html.TextBoxFor(x => x.Tarih, new { @class = "form-control" })
     <br />
     <button class="btn btn-success">Güncelle</button>
+    <a href="/Sertifika/SertifikaSil/@Model.ID" class="btn btn-danger">Sil</a>
 </form>
 
 
