--- a/MvcCv/Views/Default/Index.cshtml
+++ b/MvcCv/Views/Default/Index.cshtml
@@ -27,7 +27,10 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
             <span class="d-block d-lg-none">Clarence Taylor</span>
-            <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="/startbootstrap-resume-gh-pages/assets/img/profile.jpg" alt="..." /></span>
+            @foreach (var item in Model)
+            {
+                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="@item.Resim" alt="..." /></span>
+            }
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
@@ -58,19 +61,14 @@
                         <a href="@item.Mail">@item.Mail</a>
                     </div>
                     <p class="lead mb-5">@item.Aciklama</p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
-                    </div>
+                    @Html.Action("SosyalMedya")
                 </div>
             </section>
         }
         <hr class="m-0" />
         <!-- Experience-->
         <section class="resume-section" id="experience">
-            @Html.Action("Deneyim");
+            @Html.Action("Deneyim")
         </section>
         <hr class="m-0" />
         <!-- Education-->
