--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -53,16 +53,15 @@
                         <!-- Add icons to the links using the .nav-icon class
          with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
-                            <a href="#" class="nav-link">
+                            <a href="/Hakkimda/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Hakkımda
-                                    <i class="right fas fa-angle-left"></i>
+                                    Hakkımda                                   
                                 </p>
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="/Egitim/Index" class="nav-link">
+                            <a href="/Egitim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
                                     Eğitimlerim                                    
@@ -102,7 +101,7 @@
                             </a>
                         </li>
                         <li class="nav-item">
-                            <a href="../gallery.html" class="nav-link">
+                            <a href="/Iletisim/Index/" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
                                     İletişim                                   
