--- a/MvcCv/Views/Shared/_AdminLayout.cshtml
+++ b/MvcCv/Views/Shared/_AdminLayout.cshtml
@@ -14,6 +14,7 @@
 
     <!-- Font Awesome -->
     <link rel="stylesheet" href="/AdminLTE-3.0.4/plugins/fontawesome-free/css/all.min.css">
+    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <!-- Ionicons -->
     <link rel="stylesheet" href="https://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- overlayScrollbars -->
@@ -51,12 +52,12 @@
                 <nav class="mt-2">
                     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
                         <!-- Add icons to the links using the .nav-icon class
-         with font-awesome or any other icon font library -->
+    with font-awesome or any other icon font library -->
                         <li class="nav-item has-treeview">
                             <a href="/Hakkimda/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-tachometer-alt"></i>
                                 <p>
-                                    Hakkımda                                   
+                                    Hakkımda
                                 </p>
                             </a>
                         </li>
@@ -64,7 +65,7 @@
                             <a href="/Egitim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-th"></i>
                                 <p>
-                                    Eğitimlerim                                    
+                                    Eğitimlerim
                                 </p>
                             </a>
                         </li>
@@ -72,7 +73,7 @@
                             <a href="/Deneyim/Index/" class="nav-link">
                                 <i class="nav-icon fas fa-copy"></i>
                                 <p>
-                                    Deneyimlerim                                    
+                                    Deneyimlerim
                                 </p>
                             </a>
                         </li>
@@ -80,7 +81,7 @@
                             <a href="/Hobi/Index" class="nav-link">
                                 <i class="nav-icon fas fa-chart-pie"></i>
                                 <p>
-                                    Hobilerim                                    
+                                    Hobilerim
                                 </p>
                             </a>
                         </li>
@@ -88,7 +89,7 @@
                             <a href="/Yetenek/Index/" class="nav-link">
                                 <i class="nav-icon far fa-calendar-alt"></i>
                                 <p>
-                                    Yeteneklerim                                   
+                                    Yeteneklerim
                                 </p>
                             </a>
                         </li>
@@ -96,7 +97,7 @@
                             <a href="/Sertifika/Index" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
-                                    Sertifikalarım                                                             
+                                    Sertifikalarım
                                 </p>
                             </a>
                         </li>
@@ -104,7 +105,23 @@
                             <a href="/Iletisim/Index/" class="nav-link">
                                 <i class="nav-icon far fa-image"></i>
                                 <p>
-                                    İletişim                                   
+                                    İletişim
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/SosyalMedya/Index/" class="nav-link">
+                                <i class="nav-icon fas fa-code"></i>
+                                <p>
+                                    Sosyal Medya
+                                </p>
+                            </a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="/Login/LogOut/" class="nav-link">
+                                <i class="nav-icon fas fa-chart-pie"></i>
+                                <p>
+                                    Çıkış
                                 </p>
                             </a>
                         </li>
