--- a/MvcCv/Views/SosyalMedya/Index.cshtml
+++ b/MvcCv/Views/SosyalMedya/Index.cshtml
@@ -31,6 +31,7 @@
                                         <tr>
                                             <th style="width: 10px">#</th>                                                                                  
                                             <th>Sosyal Medya</th>
+                                            <th>Durum</th>
                                             <th>Düzenle</th>
                                             <th>Sil</th>
                                         </tr>
@@ -38,22 +39,29 @@
                                     <tbody>
                                         @foreach (var item in Model)
                                         {                                          
-                                            <tr>
-                                                <td>@item.ID</td>
-                                                <td>@item.Ad</td>                                                                                              
-                                                <td>
-                                                    <a href="/SosyalMedya/Duzenle/@item.ID" class="btn btn-info btn-sm">
-                                                        <i class="fas fa-pencil-alt"></i>
-                                                        Düzenle
-                                                    </a>
-                                                </td>
-                                                <td>
-                                                    <a href="/SosyalMedya/Sil/@item.ID" class="btn btn-danger btn-sm">
-                                                        <i class="fas fa-trash-alt"></i>
-                                                        Sil
-                                                    </a>
-                                                </td>
-                                            </tr>
+                                        <tr>
+                                            <td>@item.ID</td>
+                                            <td>@item.Ad</td>
+                                            @if(item.Durum == true)
+                                            {
+                                            <td class="text-success">Aktif</td>
+                                            }
+                                            else{
+                                            <td class="text-danger">Pasif</td>
+                                            }
+                                            <td>
+                                                <a href="/SosyalMedya/SosyalMedyaGetir/@item.ID" class="btn btn-info btn-sm">
+                                                    <i class="fas fa-pencil-alt"></i>
+                                                    Düzenle
+                                                </a>
+                                            </td>
+                                            <td>
+                                                <a href="/SosyalMedya/Sil/@item.ID" class="btn btn-danger btn-sm">
+                                                    <i class="fas fa-trash-alt"></i>
+                                                    Sil
+                                                </a>
+                                            </td>
+                                        </tr>
                                         }
                                     </tbody>
                                 </table>
@@ -86,7 +94,7 @@
                     </form>
                 </div>
             </div>
-        </div>
+        </div>        
     </div>
 </body>
 </html>
