--- a/MvcCv/Views/Egitim/Index.cshtml
+++ b/MvcCv/Views/Egitim/Index.cshtml
@@ -28,7 +28,7 @@
             <td>@item.GNO</td>
             <td>@item.Tarih</td>
             <td>
-                <a href="/Egitimm/EgitimSil/@item.ID" class="btn btn-danger btn-sm">
+                <a href="/Egitim/EgitimSil/@item.ID" class="btn btn-danger btn-sm">
                     <i class="fas fa-trash-alt"></i>
                     Sil
                 </a>
