--- a/MvcCv/Views/Default/Index.cshtml
+++ b/MvcCv/Views/Default/Index.cshtml
@@ -26,7 +26,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
         <a class="navbar-brand js-scroll-trigger" href="#page-top">
-            <span class="d-block d-lg-none">Clarence Taylor</span>
+            <span class="d-block d-lg-none">Metin Keleş</span>
             @foreach (var item in Model)
             {
                 <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="@item.Resim" alt="..." /></span>
@@ -36,12 +36,13 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">Hakkımda</a></li>
-                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Deneyimlerim</a></li>
+                @*<li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Deneyimlerim</a></li>*@
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Eğitim Hayatım</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Yeteneklerim</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Hobilerim</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Sertifikalarım</a></li>
                 <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">İletişim</a></li>
+                <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#proje">Projelerim</a></li>
             </ul>
         </div>
     </nav>
@@ -67,9 +68,9 @@
         }
         <hr class="m-0" />
         <!-- Experience-->
-        <section class="resume-section" id="experience">
+        @*<section class="resume-section" id="experience">
             @Html.Action("Deneyim")
-        </section>
+        </section>*@
         <hr class="m-0" />
         <!-- Education-->
         <section class="resume-section" id="education">
@@ -94,6 +95,9 @@
         <!-- Contact -->
         <section class="resume-section" id="contact">
             @Html.Action("iletisim")
+        </section>
+        <section class="resume-section" id="proje">
+            @Html.Action("Projelerim")
         </section>
     </div>
     <!-- Bootstrap core JS-->
