--- a/MvcCv/Views/Login/Index.cshtml
+++ b/MvcCv/Views/Login/Index.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model MvcCv.Models.Entity.TblAdmin
+
 @{
     Layout = null;
 }
@@ -31,7 +32,7 @@
                         <h3 class="mb-4 text-center">Bir Hesabın Var mı?</h3>
                         <form method="post" class="signin-form">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Kullanıcı Adınız" name="KullaniciAdi" required>
+                                <input type="text" class="form-control" placeholder="Kullanıcı Adınız" name="KullaniciAdi" required>                               
                             </div>
                             <div class="form-group">
                                 <input id="password-field" type="password" class="form-control" placeholder="Şifreniz" name="Sifre" required>
@@ -47,14 +48,14 @@
                                         <input type="checkbox" checked>
                                         <span class="checkmark"></span>
                                     </label>
-                                </div>                              
+                                </div>
                             </div>
                         </form>
                         @*<p class="w-100 text-center">&mdash; Or Sign In With &mdash;</p>
-                        <div class="social d-flex text-center">
-                            <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
-                            <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
-                        </div>*@
+                            <div class="social d-flex text-center">
+                                <a href="#" class="px-2 py-2 mr-md-1 rounded"><span class="ion-logo-facebook mr-2"></span> Facebook</a>
+                                <a href="#" class="px-2 py-2 ml-md-1 rounded"><span class="ion-logo-twitter mr-2"></span> Twitter</a>
+                            </div>*@
                     </div>
                 </div>
             </div>
