--- a/MvcCv/Views/Proje/ProjeDetay.cshtml
+++ b/MvcCv/Views/Proje/ProjeDetay.cshtml
@@ -115,15 +115,16 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <a href="@Model.ProjeLink"><i class="fab fa-github fa-3x text-secondary"></i></a>
                             <span>Github Linki</span>
                         </div>
-                    </div>                 
+                    </div>
+                  @Html.Action("ProjeYorumlar")
                 </div>
 
                 <!--//left-->
                 <!--right-->
                 <aside class="col-lg-4 agileits-w3ls-right-blog-con text-right">
-                    <div class="right-blog-info text-left">   
+                    <div class="right-blog-info text-left">
                         @*<div class="h4 d-flex justify-content-center">Proje Resimleri</div>
-                            <img src="@Model.ProjeResim2" class="img-fluid" alt="">*@                                                                      
+            <img src="@Model.ProjeResim2" class="img-fluid" alt="">*@
                         <div class="tech-btm">
                             <h4>Top stories of the week</h4>
 
@@ -165,8 +166,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 
                             </div>
                         </div>
-                    </div>
-
+                    </div>              
                 </aside>
                 <!--//right-->
             </div>
