--- a/MvcCv/Views/Proje/ProjeYorumlar.cshtml
+++ b/MvcCv/Views/Proje/ProjeYorumlar.cshtml
@@ -3,6 +3,7 @@
     <h4>Yorum Yap</h4>
     <div class="comment-bottom">
         <form method="post">
+            <input type="hidden" name="ProjeId" value="@ViewBag.projeid"/>
             <input class="form-control text-dark" type="text" name="AdSoyad" placeholder="Ad Soyad" required="">
             <input class="form-control text-dark" type="email" name="Mail" placeholder="Email" required="">
 
