--- a/MvcCv/Views/Proje/ProjeDetay.cshtml
+++ b/MvcCv/Views/Proje/ProjeDetay.cshtml
@@ -116,7 +116,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                             <span>Github Linki</span>
                         </div>
                     </div>
-                  @Html.Action("ProjeYorumlar")
+                  @Html.Action("ProjeMesaj","ProjeYorumlar", new { area = "" })
                 </div>
 
                 <!--//left-->
