--- a/MvcCv/Views/Default/Hobilerim.cshtml
+++ b/MvcCv/Views/Default/Hobilerim.cshtml
@@ -11,6 +11,12 @@
 
     <ul class="list-inline dev-icons my-4">
         <li class="list-inline-item"><i class="fa-solid fa-book"></i></li>       
-        <li class="list-inline-item"><i class="fa-solid fa-book"></i></li>       
+        <li class="list-inline-item"><i class="fa-solid fa-dumbbell"></i></li>       
+        <li class="list-inline-item"><i class="fa-solid fa-bowl-food"></i></li>       
+        <li class="list-inline-item"><i class="fa-solid fa-music"></i></li>       
+        <li class="list-inline-item"><i class="fa-sharp fa-solid fa-video"></i></li>       
+        <li class="list-inline-item"><i class="fa-sharp fa-solid fa-user-group"></i></li>       
+        <li class="list-inline-item"><i class="fa-solid fa-code"></i></li>       
+        
     </ul>
 </div>
