--- a/MvcCv/Views/Proje/ProjeDetay.cshtml
+++ b/MvcCv/Views/Proje/ProjeDetay.cshtml
@@ -121,9 +121,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                         </div>
                     </div>
                     <div id="comments">
-                        @Html.Action("_YorumListesi")
+                        @Html.Action("_YorumListesi", "projeMesaj")
                     </div>
-                    @Html.Action("_ProjeYorumlar")
+                    @Html.Action("_ProjeYorumlar","ProjeMesaj")
                 </div>
 
                 <!--//left-->
