--- a/MvcCv/Views/ProjeMesaj/_YorumListesi.cshtml
+++ b/MvcCv/Views/ProjeMesaj/_YorumListesi.cshtml
@@ -7,7 +7,7 @@
     @foreach (var item in Model)
     {
 <div class="media">    
-    <img src="~/CoreBlogTema-main/web/images/2.png" alt="" class="img-fluid" style="width: 70px; height:auto" />
+    <img src="~/CoreBlogTema-main/web/images/2.jpg" alt="" class="img-fluid" style="width: 70px; height:auto" />
     <div class="media-body">
         <h5 class="mt-0 text-capitalize">@item.AdSoyad</h5>
         <p>
