--- a/MvcCv/Views/Default/Projelerim.cshtml
+++ b/MvcCv/Views/Default/Projelerim.cshtml
@@ -1,8 +1,8 @@
 ﻿@using MvcCv.Models.Entity
-@model List<TblProjelerim>
-@*@using PagedList
+@*@model List<TblProjelerim>*@
+@using PagedList
 @using PagedList.Mvc
-@model PagedList.IPagedList<TblProjelerim>*@
+@model PagedList.IPagedList<TblProjelerim>
 
 @{
     Layout = null;
@@ -30,11 +30,11 @@
 
 </div>
 
-@*@Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Projelerim", new { sayfa }), new PagedListRenderOptions
+@Html.PagedListPager((IPagedList)Model, sayfa => Url.Action("Projelerim", new { sayfa }), new PagedListRenderOptions
 {
     LiElementClasses = new List<string>
     { "page-link"}
-})*@
+})
 
 
 
